[doc] Groom backlog: remove completed items and trim the status narration